--- a/src/public/styles/main.styl
+++ b/src/public/styles/main.styl
@@ -386,6 +386,9 @@ a.text-darkgreen
 				border-bottom solid 2px white
 				padding-bottom 13px
 
+.icon-bar
+	background-color white
+
 .above-navbar
 	position relative
 	z-index 2000 // must be greater than z-index of Bootstrap navbar (1029)
